log
Sat Apr  9 19:46:59 HSP 2022: 
 hashmap.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
2a07b12
Sat Apr  9 19:47:35 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
d4dd319
Sat Apr  9 19:51:36 HSP 2022: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|6
total_score: 0/70
6af80d2
